[2025-07-14 17:25:36]: Update HTML files